@@ -1,21 +1,21 @@
 //;# autogenerated:  Do not edit.
 
-//; $tls::func = -3724;
-//; $tls::saved_errno = -3720;
-//; $tls::sa_flags = -3716;
-//; $tls::oldmask = -3712;
-//; $tls::newmask = -3708;
-//; $tls::event = -3704;
-//; $tls::errno_addr = -3700;
-//; $tls::initialized = -3696;
-//; $tls::sigmask = -3692;
-//; $tls::sigwait_mask = -3688;
-//; $tls::sigwait_info = -3684;
-//; $tls::threadkill = -3680;
-//; $tls::infodata = -3676;
-//; $tls::tid = -3528;
-//; $tls::local_clib = -3524;
-//; $tls::locals = -2596;
+//; $tls::func = -3736;
+//; $tls::saved_errno = -3732;
+//; $tls::sa_flags = -3728;
+//; $tls::oldmask = -3724;
+//; $tls::newmask = -3720;
+//; $tls::event = -3716;
+//; $tls::errno_addr = -3712;
+//; $tls::initialized = -3708;
+//; $tls::sigmask = -3704;
+//; $tls::sigwait_mask = -3700;
+//; $tls::sigwait_info = -3696;
+//; $tls::threadkill = -3692;
+//; $tls::infodata = -3688;
+//; $tls::tid = -3540;
+//; $tls::local_clib = -3536;
+//; $tls::locals = -2608;
 //; $tls::prev = -1040;
 //; $tls::next = -1036;
 //; $tls::stackptr = -1032;
@@ -24,22 +24,22 @@
 //; $tls::padding = 0;
 //; __DATA__
 
-#define tls_func (-3724)
-#define tls_saved_errno (-3720)
-#define tls_sa_flags (-3716)
-#define tls_oldmask (-3712)
-#define tls_newmask (-3708)
-#define tls_event (-3704)
-#define tls_errno_addr (-3700)
-#define tls_initialized (-3696)
-#define tls_sigmask (-3692)
-#define tls_sigwait_mask (-3688)
-#define tls_sigwait_info (-3684)
-#define tls_threadkill (-3680)
-#define tls_infodata (-3676)
-#define tls_tid (-3528)
-#define tls_local_clib (-3524)
-#define tls_locals (-2596)
+#define tls_func (-3736)
+#define tls_saved_errno (-3732)
+#define tls_sa_flags (-3728)
+#define tls_oldmask (-3724)
+#define tls_newmask (-3720)
+#define tls_event (-3716)
+#define tls_errno_addr (-3712)
+#define tls_initialized (-3708)
+#define tls_sigmask (-3704)
+#define tls_sigwait_mask (-3700)
+#define tls_sigwait_info (-3696)
+#define tls_threadkill (-3692)
+#define tls_infodata (-3688)
+#define tls_tid (-3540)
+#define tls_local_clib (-3536)
+#define tls_locals (-2608)
 #define tls_prev (-1040)
 #define tls_next (-1036)
 #define tls_stackptr (-1032)
