@@ -1,7 +1,12 @@
 2004-02-03  Christopher Faylor  <cgf@redhat.com>
 
+	* cygtls.h (_local_storage::signamebuf): Increase size to prevent
+	overflow on really odd values.
+
+2004-02-03  Christopher Faylor  <cgf@redhat.com>
+
 	* Makefile.in (DLL_OFILES): Add strsig.o.
-	* cygtls.h (_local_storage::signamebuf) New element.
+	* cygtls.h (_local_storage::signamebuf): New element.
 	* sysconf.cc (sysconf): Implement _SC_RTSIG_MAX.
 	* tlsoffset.h: Regenerate.
 	* include/limits.h (_POSIX_RTSIG_MAX): New define.
